<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#494A4E"
    tools:context=".activity.ConfirmFinalOrderActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="165dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="@string/order_details"
        android:textAlignment="center"
        android:textColor="#E1E6E8"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/shippment_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"

        android:layout_marginTop="128dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/fist_and_last_name"
        android:textColorHint="#E1E6E8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/shippment_phone_number"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:textColorHint="#E1E6E8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shippment_name" />

    <EditText
        android:id="@+id/shippment_address"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/address"
        android:textColorHint="#E1E6E8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shippment_phone_number" />

    <EditText
        android:id="@+id/shippment_city"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/city"
        android:textColorHint="#E1E6E8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shippment_address" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#E1E6E8"
        android:id="@+id/confirmBtn"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="#201F1F"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shippment_city"
        app:strokeColor="#201F1F"
        app:strokeWidth="1dp" />
</androidx.constraintlayout.widget.ConstraintLayout>

<!--    android:onClick="check"-->