<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardElevation="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E8EAF6"
        android:padding="10dp">

        <TextView
            android:id="@+id/cart_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/product_name"
            android:textColor="#494A4E"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cart_product_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cart_product_name"
            android:layout_alignParentEnd="false"
            android:layout_marginTop="15dp"
            android:layout_marginRight="2dp"
            android:gravity="center"
            android:text="@string/quantity"
            android:textAlignment="viewEnd"
            android:textColor="#494A4E"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cart_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cart_product_quantity"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/price"
            android:textColor="#494A4E"
            android:textStyle="bold" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>