<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="20dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    app:cardElevation="15dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E8EAF6">

        <TextView
            android:id="@+id/products_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/product_name"
            android:textAlignment="center"
            android:textColor="#494A4E"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/products_name"
            android:layout_marginTop="2dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/products_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_image"
            android:padding="10dp"
            android:text="@string/price"
            android:textAlignment="center"
            android:textColor="#494A4E"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/products_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/products_price"
            android:layout_marginTop="2dp"
            android:padding="10dp"
            android:text="@string/description"
            android:textAlignment="center"
            android:textColor="#494A4E"
            android:textSize="16dp" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>