<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#494A4E"
    tools:context=".activity.CartActivity">

    <RelativeLayout
        android:id="@+id/realtive_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="#EC407A">

        <TextView
            android:id="@+id/total_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:text="@string/cost"
            android:textAlignment="center"
            android:textColor="@android:color/white"

            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/prompt"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/next_button"
        android:layout_below="@+id/realtive_layout" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="21dp"
        android:backgroundTint="#E1E6E8"
        android:onClick="next"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="#201F1F"
        android:textSize="18sp"
        app:strokeColor="#201F1F"
        app:strokeWidth="1dp" />
</RelativeLayout>

    <!--        android:onClick="next"-->